--- a/css/boardpage.css
+++ b/css/boardpage.css
@@ -5,12 +5,20 @@ html {
 
 .home {
 	text-align: centrer;
+	background: #333;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.home .container {
+	width: 100%;
 }
 
 .home header {
 	width: 100%;
 	text-align: center;
-	padding: 20px 0;
+	margin-top: -100px;
 }
 
 .home header img { 
@@ -27,17 +35,21 @@ html {
 
 .home nav ul {
 	padding: 0;
+	text-align: center;
 }
 
 .home nav li { 
 	list-style: none;
-	display: inline-block;
+	display: block;
 	padding: 10px 25px;
+	width: auto;
+	max-width: 350px;
+	margin: 0 auto;
 }
 
 .home nav li:before { 
 	content: '.';
-	background: #000;
+	background: #fff;
 	color: transparent;
 	display: inline-block;
 	position: relative;
@@ -51,7 +63,7 @@ html {
 
 .home nav li:after { 
 	content: '.';
-	background: #000;
+	background: #fff;
 	color: transparent;
 	display: inline-block;
 	position: relative;
@@ -80,7 +92,39 @@ html {
 	color: #555;
 	font-size: 28px;
 	display: inline-block;
+	color: #fff;
 }
+
+.imgBg {
+	background: url('../images/bg.jpg');
+	background-size: cover;
+	background-position: center;
+	opacity: .6;
+	position: absolute;
+	top:0;
+	left: 0;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+}
+
+@media (max-width: 750px) {
+	.home nav {
+		width: 100%;
+	}
+
+	.home nav li { 
+		padding: 10px;
+		text-align: left;
+	}
+
+	
+
+	.home nav li:after { 
+		display: none;
+	}
+}
+
 
 /*------------------------*/
 
